--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -31,7 +31,7 @@ ul {
   margin: 2rem;
   padding: 0;
 }
-@media (min-width: 374px) {
+@media (max-width: 374px) {
   ul {
     margin: 1rem;
   }
@@ -49,8 +49,18 @@ main {
 main h1, main section h1 {
   font-weight: 600;
   font-size: 2.6rem;
+  overflow: hidden;
 }
 
+header .main-header .navbar-nav .dropdown-menu {
+  padding: 2rem;
+}
+@media (min-width: 992px) {
+  header .main-header .navbar-nav .dropdown-menu {
+    width: 200px;
+    padding: 1.2rem;
+  }
+}
 header .main-header .logo a > img {
   width: 60px;
   height: auto;
@@ -164,6 +174,7 @@ header .container-nav {
 }
 .auto-grid .col li {
   margin-bottom: 1rem;
+  overflow: hidden;
 }
 .auto-grid .col img {
   width: 120px;
@@ -217,6 +228,7 @@ header .container-nav {
   font-weight: 600;
   margin-bottom: 1rem;
   text-align: center;
+  overflow: hidden;
 }
 #listing .listing-info .card-auction, #watchlist .listing-info .card-auction, #category .listing-info .card-auction, #winner .listing-info .card-auction {
   position: relative;
@@ -475,6 +487,7 @@ header .container-nav {
 
 #watchlist h1, #category h1, #winner h1 {
   margin-top: 7rem;
+  overflow: hidden;
 }
 #watchlist .auto-grid, #category .auto-grid, #winner .auto-grid {
   margin: 12rem 20px 2rem;
@@ -492,6 +505,7 @@ header .container-nav {
 
 #category h1 {
   margin-top: 7rem;
+  overflow: hidden;
 }
 #category .go-back-category {
   margin: 2rem;
